force-app/main/default/objects/subscription_plan__c/subscription_plan__c.object-meta.xml
<CustomObject>
    <label>subscription plan</label>
    <nameField>
        <displayFormat>SP-{000}</displayFormat>
        <label>subscription plan id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>subscription plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>