force-app/main/default/objects/subscription_plan__c/fields/offer__c.field-meta.xml
<CustomField>
    <fullName>offer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>offer</label>
    <type>Checkbox</type>
</CustomField>