force-app/main/default/objects/subscription_plan__c/fields/service1__c.field-meta.xml
<CustomField>
    <fullName>service1__c</fullName>
    <label>service1</label>
    <referenceTo>service1__c</referenceTo>
    <relationshipLabel>subscription plan</relationshipLabel>
    <relationshipName>subscription_plan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>