force-app/main/default/objects/subscription_plan__c/fields/subscription_plan_type__c.field-meta.xml
<CustomField>
    <fullName>subscription_plan_type__c</fullName>
    <label>subscription plan type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>